@@ -114,6 +114,8 @@ public:
   void SetStartupLocation(const GeoPoint &loc, const fixed alt);
   void ProcessSimulation();
   void StopReplay();
+
+  void SetSimulatorLocation(const GeoPoint &location);
   void SetTrack(Angle val);
   void SetSpeed(fixed val);
   void SetAltitude(fixed alt);
